<resources>
    <string name="app_name">Learn Kana</string>
    <string name="app_title">Learn Kana（かな）</string>
    <string name="question_placeholder">Q</string>
    <string name="answer_placeholder">A</string>
    <string name="hiraganaProgress">Hiragana （ひらがな）</string>
    <string name="katakanaProgress">Katakana （カタカナ）</string>
    <string name="charProgress">Character Progress</string>
    <string name="blockProgress">Block Progress</string>
    <string name="next">Next</string>


    <string name="preference_file_key">LearnKana</string>
    <string name="null_data_storage">{\"timestamp\": 0, \"gameScore\": 0}</string>
</resources>
